navigation drawer :  completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Material Design</string>
+    <string name="navDrawerOpen">navigation drawer open</string>
+    <string name="navDrawerClose">navigation drawer close</string>
 </resources>
